Fixed menu overlap bug

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -16,7 +16,7 @@ body {
     margin: 0;
     text-align: center;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     list-style-type: none;
     background: $palette-color-1;
     li {
@@ -44,10 +44,10 @@ body {
         }
     }
     @media only screen and (max-width: 500px) {
-        position: fixed;
+        position: absolute;
         width: 100%;
         margin-top: 3.7em;
-        z-index: 50;
+        z-index: 10;
     }
 }
 
@@ -155,7 +155,7 @@ body {
         padding: 1em 0;
         text-align: center;
         border-bottom: 1px solid #dbd9d4;
-        z-index: 10;
+        z-index: 20;
         background-color: #fff;
         h1 {
             font-size: 1.25em;
@@ -186,7 +186,7 @@ body {
             float: left;
             width: 33.33%;
             margin-bottom: -4px;
-            z-index: 10;
+            z-index: 0;
             .thumb {
                 position: absolute;
                 width: 100%;
